--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -1,5 +1,6 @@
 @import "./sass/base/reset";
 @import "./sass/components/register";
+@import "./sass/components/login";
 @import "./sass/utils/utils";
 @import "./sass/components/messenger";
 @import "./sass/layout/grid";
