--- a/frontend/src/sass/components/_messenger.scss
+++ b/frontend/src/sass/components/_messenger.scss
@@ -32,6 +32,9 @@
                 object-fit: cover;
               }
             }
+            .user-name-phone {
+              display: none;
+            }
             .name {
               display: flex;
               justify-content: center;
@@ -44,6 +47,9 @@
             }
           }
           .icons {
+            .friend-search {
+              display: none;
+            }
             display: flex;
             position: relative;
             .theme_logout.show {
@@ -117,6 +123,170 @@
               color: var(--text-color);
               &::placeholder {
                 color: var(--text-color);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .messenger {
+    width: 100%;
+    height: 100vh;
+    .row {
+      display: flex;
+      flex-direction: column;
+      box-shadow: 5px solid black;
+      width: 100%;
+      .col-3 {
+        height: 100vh;
+        width: 100%;
+        .left-side {
+          padding: 5px 0px;
+          border-right: 1px solid var(--border-color);
+
+          height: 100%;
+          .top {
+            box-shadow: #911010;
+            display: flex;
+            flex-direction: row;
+            // border: 5px solid red;
+            justify-content: space-between;
+            align-content: center;
+            .image-name {
+              width: 100%;
+              display: flex;
+              flex-direction: row-reverse;
+              justify-content: space-between;
+
+              cursor: pointer;
+              .image {
+                margin-top: 18px;
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                overflow: hidden;
+                width: 18%;
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                }
+              }
+              .user-name-phone {
+                display: block;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                h3 {
+                  font-family: "Lucida Sans", "Lucida Sans Regular",
+                    "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana,
+                    sans-serif;
+                  padding-right: 5px;
+                  font-size: 20px;
+                  color: var(--text-color);
+                }
+              }
+              .name {
+                display: none;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                h3 {
+                  display: none;
+                  font-family: fantasy;
+                  padding-left: 10px;
+                  font-weight: 600;
+                  color: var(--text-color);
+                }
+              }
+            }
+            .icons {
+              .friend-search {
+                display: block;
+                width: 75%;
+              }
+              display: flex;
+              position: relative;
+              width: 100%;
+              .theme_logout.show {
+                transform: scale(1);
+              }
+              .theme_logout {
+                width: 100%;
+                background-color: rgb(20, 24, 59);
+                transform: scale(0);
+                position: absolute;
+                transition: all 0.6s;
+                top: 100%;
+                padding: 10px;
+                color: #fff;
+                .on,
+                .of {
+                  label {
+                    cursor: pointer;
+                    color: #fff;
+                  }
+                  display: flex;
+                  justify-content: space-between;
+                  margin-top: 10px;
+                }
+                .logout {
+                  display: flex;
+                  align-items: center;
+                  margin-top: 10px;
+                  cursor: pointer;
+                }
+              }
+              .icon {
+                margin-top: 24px;
+
+                width: 33px;
+                height: 33px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: var(--icon-bg-color);
+                margin-left: 8px;
+                border-radius: 24px;
+                color: var(--icon-color);
+                cursor: pointer;
+              }
+            }
+          }
+          .friend-search {
+            display: none;
+            padding: 0px 8px;
+            .search {
+              display: flex;
+              width: 100%;
+              height: 40px;
+              background-color: var(--search-bg);
+              border-radius: 50px;
+              margin: 20px 0px;
+              button {
+                padding: 12px;
+                border-bottom-left-radius: 50px;
+                border-top-left-radius: 50px;
+                border: none;
+                color: var(--text-color);
+                font-size: 20px;
+                background-color: transparent;
+              }
+              .form-control {
+                width: 100%;
+                padding-left: 0px;
+                border-bottom-right-radius: 50px;
+                border-top-right-radius: 50pc;
+                background-color: #fff0;
+                border: none;
+                color: var(--text-color);
+                &::placeholder {
+                  color: var(--text-color);
+                }
               }
             }
           }
